# EasyPR

./: .gitignore  CMakeLists.txt
include/easypr/core/: chars_identify.h
include/easypr/export/: accuracy.h  annCh_train.h  ann_train.h  plate_locate.h  plate_recognize.h  process.h  py.h  svm_train.h
include/easypr/py/: process.h  py.h
resources/result/: Result.xml  accuracy.txt  plateGroundTruth.txt
src/export/: annCh_train.cpp  ann_train.cpp  plate_locate.cpp  plate_recognize.cpp  process.cpp  py.cpp  svm_train.cpp
src/py/: process.cpp  py.cpp
src/train/: annCh_train.cpp
